<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/leftSideLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/minusButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/minusButton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/subtract"
            android:src="@drawable/image_button_minus"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:id="@+id/leftSideDivider"
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:layout_margin="10sp"
        android:layout_marginRight="5sp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/rowLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_white"
                android:src="@drawable/mana_white" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_blue"
                android:src="@drawable/mana_blue" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_black"
                android:src="@drawable/mana_black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_red"
                android:src="@drawable/mana_red" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_green"
                android:src="@drawable/mana_green" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_colorless"
                android:src="@drawable/mana_colorless" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowLayout7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/mana_any"
                android:src="@drawable/mana_any" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/rightSideDivider"
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:layout_margin="10sp"
        android:layout_marginLeft="5sp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/rightSideLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/plusButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/plusButton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/add"
            android:src="@drawable/image_button_plus"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>